# SAIQL-CE

./: .dockerignore  COMMERCIAL.md  CONTRIBUTING.md  DISCLAIMER.md  Docker.md  Dockerfile  INVESTORS.md  LICENSE.md  NOTICE  QA_REPORT_CE_CORE.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SAIQL_UPDATE_2025-12-14.md  Semantic_RAG.md  VERSION  __init__.py  docker-compose.test.yml  docker-compose.yml  openapi.yaml  pyproject.toml  pytest.ini  requirements-ce.txt  requirements.txt  saiql.py  saiql_production_server.py  setup.py
benchmarks/: benchmark_indexes.py  benchmark_joins.py  hybrid_eval.py  lsm_vs_postgresql.py  run_benchmark.py  saiql_vs_postgres.py
config/: .env.template  database_config.json  database_config_secure.json  secure_config.py  semantic_firewall_rules.json  server_config.json
core/: README.md  __init__.py  audit_generator.py  btree.py  ce_edition.py  compiler.py  database_manager.py  engine.py  errors.py  execution_planner.py  grounding_ce.py  hash_index.py  index_manager.py  join_engine.py  lexer.py  logging.py  loretoken_lite.py  metrics.py  migration.py  monitor.py  operators.py  package_analyzer.py  parser.py  qipi_lite.py  report_generator.py  routine_reporter.py  routine_translator.py  runtime.py  safe_query_builder.py  safety.py  saiql_types.py  schema_ir.py  semantic_firewall.py  statistics_collector.py  symbolic_engine.py  transaction_manager.py  translator.py  trigger_translator.py  type_registry.py  view_translator.py
data/: legend_map.lore  lore_store.db
deployment/: Dockerfile  docker-compose.prod.yml
examples/: example_queries.saiql
interface/: README_SERVER_MIGRATION.md  io_interface.py  saiql_server_enhanced.py  saiql_server_secured.py
k8s/: configmap.yaml  deployment.yaml  service.yaml
models/: README.md
scripts/: backup_restore.py  check_deployment_config.py  clean_artifacts.sh  generate_certs.sh  install_minimal.sh  install_system.sh  test_fresh_clone.sh  test_installation.sh  verify_security.py
security/: .gitignore  SECURITY_TEMPLATE_SETUP.md  api_keys.json.template  auth_manager.py  jwt_secret.key.template  secrets_manager.py  setup_security.sh  users.json.template
shell/: __init__.py  query_shell.py
speed_test/: .gitignore  README.md
tests/: conftest.py  regression_suite.py  test_btree.py  test_ce_edition.py  test_credential_safety.py  test_data_semantics.py  test_defaults_policy.py  test_dry_run_safety.py  test_duckdb_adapter.py  test_grounded_retrieval_guard.py  test_hana_l2l3l4.py  test_join_engine.py  test_lossy_warnings.py  test_mariadb_compat.py  test_phase05_output.py  test_phase05_packaging.py  test_phase06_capability_flags.py  test_phase06_codex_round2_fixes.py  test_phase06_package_strategy.py  test_phase06_report_generator.py  test_phase06_trigger_translation.py  test_phase06_view_translation.py  test_phase06_whitelist_enforcement.py  test_type_matrix.py  (+6 more)
(+222 files in other folders)
